--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="utf-8" />
     <title></title>
-    <style type="text/css" href="css/reset.min.css"></style>
+    <link rel="stylesheet" href="css/nitrotype.css">
 	<script data-main="js/main" src="js/libs/requirejs/require-2.0.1.min.js"></script>
 </head>
 <body>
 	<!-- TODO: Adds page content -->
 	<div id="body">
 		This is initial page
+	</div>
+	<div id="game">
 	</div>
 	<!-- END TODO -->
 </body>
